add to api new handlers and refactor
